k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: one-game
  labels:
    name: one-game
