k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/websocket-services: "rest-service-game"
  labels:
    name: rest-api-ingress
  name: rest-api-ingress
  namespace: one-game
spec:
  rules:
  - host: api.cornie.game
    http:
      paths:
      - path: /v2/auth
        pathType: Prefix
        backend:
          service:
            name: rest-service-user
            port:
              number: 3001
      - path: /v1/events/games
        pathType: Prefix
        backend:
          service:
            name: rest-service-game
            port:
              number: 3002
      - path: /v1/games
        pathType: Prefix
        backend:
          service:
            name: rest-service-game
            port:
              number: 3002
      - path: /v1/users
        pathType: Prefix
        backend:
          service:
            name: rest-service-user
            port:
              number: 3001
  - host: cornie.game
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service-web-ui
              port:
                number: 8002
